src/sass/components/_section.scss
.section {
  background-color: $color-section-background;
  max-width: $base-unit * 52.5;
  margin: 0 $base-unit $base-unit $base-unit * 10;
  box-shadow: 0 $base-unit * 0.1 $base-unit * 0.2 0 rgba(0, 0, 0, 0.2);

  @include min-media($br-xl-desktop) {
    margin: 0 auto $base-unit;
    max-width: 70%;
  }

  @include max-media($br-desktop) {
    margin: 0 auto $base-unit;
    max-width: 90%;
  }
}

.section.hidden {
  margin: 0 auto $base-unit;

  @include min-media($br-desktop) {
    max-width: 85%;
  }

  @include min-media($br-xl-desktop) {
    max-width: 70%;
  }

  &:first-of-type {
    margin: $base-unit * 4 auto $base-unit;
  }
}

.section__header {
  padding: $base-unit * 0.75;
  border-bottom: $base-unit * 0.1 solid $color-border;
}

.content__date {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  padding-top: $base-unit * 1.65;
  padding-bottom: $base-unit * 1.9;
  border-bottom: $color-border solid $base-unit * 0.1;
  margin-bottom: $base-unit * 2;

  @include max-media($br-tablet) {
    flex-direction: column;
  }

  .date__inputs {
    display: flex;
    margin-right: $base-unit * 0.75;

    .inputs__item {
      border: $color-border solid $base-unit * 0.1;
      height: $base-unit * 2;

      &:first-of-type {
        border-radius: $base-unit * 0.25 0 0 $base-unit * 0.25;
      }

      &:last-of-type {
        border-radius: 0 $base-unit * 0.25 $base-unit * 0.25 0;
        position: relative;

        &::before {
          content: "";
          position: absolute;
          background-color: $color-border;
          width: $base-unit * 0.1;
          height: 50%;
          top: 25%;
          left: 0;
        }
      }

      .inputs__input {
        width: $base-unit * 7.5;
        height: 100%;
        padding-left: $base-unit;
        border: none;
        color: $color-dark;
      }

      &:first-of-type {
        border-right: none;
      }

      &:last-of-type {
        position: relative;
        border-left: none;

        .inputs__input {
          padding-right: $base-unit * 1.5;
        }

        .inputs__icon {
          position: absolute;
          display: block;
          width: $base-unit;
          height: $base-unit;
          left: 85%;
          top: 25%;
          filter: opacity(50%);
        }
      }
    }
  }
}

.content__list-digit {
  display: flex;
  width: 100%;
  align-items: center;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 0 0 $base-unit * 3.75 0;
  max-height: $base-unit * 5.5;

  @include max-media($br-desktop) {
    max-height: none;
  }

  .list-digit__item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: $base-unit * 16;
    padding: $base-unit * 1.15 0 $base-unit * 0.5;
    border-bottom: $color-border solid $base-unit * 0.1;

    @include max-media($br-desktop) {
      width: 80%;
    }

    @include max-media($br-tablet) {
      width: 90%;
    }
  }
}

.content__earnings-chart {
  padding-bottom: $base-unit * 3;

  .earnings-chart__header {
    margin-bottom: $base-unit * 2;

    @include max-media($br-desktop) {
      margin-left: $base-unit;
    }
  }

  .earnings-chart__color-tabs {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: $base-unit * 3.75;

    @include max-media($br-tablet) {
      flex-direction: column;
      margin-bottom: $base-unit * 1.5;
      align-items: stretch;
    }

    .color-tabs__item {
      margin: 0 $base-unit * 0.5;

      @include max-media($br-tablet) {
        margin: 0 $base-unit * 2 $base-unit * 0.5 $base-unit * 2;
      }
    }
  }
}

.content__list-links {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;

  .list-links__item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: $base-unit * 3;
    border-top: $color-border solid $base-unit * 0.1;

    &:last-of-type {
      border-bottom: $color-border solid $base-unit * 0.1;
    }

    &:hover {
      background: $color-border;
    }

    @include max-media($br-desktop) {
      width: 90%;
    }
  }

  .item__header {
    padding-left: $base-unit * 0.8;
  }

  .item__icons {
    display: flex;
    padding-right: $base-unit * 0.8;

    .icons__icon {
      width: $base-unit * 0.75;
      padding: 0 $base-unit * 0.5;
      cursor: pointer;
      background-color: $color-dark-lighter;
      text-indent: -9999px;
    }

    .icons__icon.links {
      mask: url(../assets/icons/links.svg) no-repeat center;
      width: $base-unit * 0.5;

      &:hover {
        background-color: $color-main;
      }
    }

    .icons__icon.trash {
      mask: url(../assets/icons/trash.svg) no-repeat center;

      &:hover {
        background-color: $color-danger;
      }
    }
  }
}

